--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "react-dom": "15.3.2",
     "react-redux": "5.0.3",
     "react-router": "3.0.2",
+    "react-router-dom": "^4.1.1",
     "redux": "3.6.0",
-    "redux-logger" : "2.10.1",
+    "redux-logger": "2.10.1",
     "redux-router": "2.1.2",
     "redux-thunk": "2.2.0",
     "whatwg-fetch": "2.0.3"
