--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "re-base": "2.2.0",
     "react": "15.3.2",
     "react-addons-css-transition-group": "15.3.2",
+    "react-bootstrap-table": "^3.3.7",
     "react-dom": "15.3.2",
     "react-redux": "5.0.3",
     "react-router": "3.0.2",
     "react-router-dom": "^4.1.1",
+    "reactable": "^0.14.1",
     "redux": "3.6.0",
     "redux-logger": "2.10.1",
     "redux-router": "2.1.2",
