--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/.eslintrc"
