--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "start": "react-scripts start",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "test": "react-scripts test --env=jsdom"
   },
   "eslintConfig": {
